manifest/objects/GBCloud__GridBuddyCloudSettings__c.object
<CustomObject>
    <fields>
        <fullName>GBCloud__Datasource_Id__c</fullName>
        <inlineHelpText>This is the GridBuddy Cloud Datasource Id.</inlineHelpText>
        <label>Connector Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBCloud__Host__c</fullName>
        <inlineHelpText>This is the host used by the GridBuddy Cloud Grids and Wizard tabs.  If this field is left blank, the default host is www.gridbuddycloud.com.</inlineHelpText>
        <label>Host</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBCloud__Organization_Id__c</fullName>
        <inlineHelpText>This is the GridBuddy Cloud Organization Id.</inlineHelpText>
        <label>Organization Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>GridBuddy Connect Settings</label>
    <listViews>
        <fullName>GBCloud__All</fullName>
        <columns>NAME</columns>
        <columns>GBCloud__Organization_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GridBuddy Connect Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GridBuddy Connect Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>